--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
         }
 
         body {
-            background-color: #f5f7fb;
+            background: #f5f7fb;
             min-height: 100vh;
             display: flex;
             flex-direction: column;
@@ -25,7 +25,7 @@
         .logo {
             width: 80px;
             height: 80px;
-            background-color: #1a73e8;
+            background: #1a73e8;
             border-radius: 50%;
             display: flex;
             align-items: center;
@@ -41,38 +41,34 @@
 
         h1 {
             font-size: 2.5rem;
-            color: #1a2b4e;
-            margin-bottom: 1rem;
+            color: #1a1a1a;
+            margin-bottom: 0.5rem;
         }
 
         .subtitle {
+            color: #666;
             font-size: 1.2rem;
-            color: #64748b;
             margin-bottom: 3rem;
         }
 
         .container {
-            width: 100%;
-            max-width: 600px;
-            text-align: center;
-        }
-
-        .access-container {
             background: white;
             padding: 2rem;
             border-radius: 12px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
-            margin-bottom: 1.5rem;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            width: 100%;
+            max-width: 500px;
+            text-align: center;
         }
 
         .access-title {
             font-size: 1.8rem;
-            color: #1a2b4e;
+            color: #1a1a1a;
             margin-bottom: 1rem;
         }
 
         .access-subtitle {
-            color: #64748b;
+            color: #666;
             margin-bottom: 2rem;
         }
 
@@ -82,225 +78,335 @@
 
         input {
             width: 100%;
-            padding: 1rem;
-            border: 2px solid #e2e8f0;
-            border-radius: 8px;
+            padding: 0.8rem 1rem;
             font-size: 1rem;
-            margin-bottom: 1rem;
+            border: 2px solid #e1e1e1;
+            border-radius: 8px;
+            outline: none;
             transition: border-color 0.2s;
         }
 
         input:focus {
-            outline: none;
             border-color: #1a73e8;
         }
 
         .btn {
-            background-color: #1a73e8;
+            background: #1a73e8;
             color: white;
             border: none;
-            padding: 1rem 2rem;
-            border-radius: 8px;
+            padding: 0.8rem 2rem;
             font-size: 1rem;
-            font-weight: 500;
+            border-radius: 8px;
             cursor: pointer;
-            transition: background-color 0.2s;
+            transition: background 0.2s;
         }
 
         .btn:hover {
-            background-color: #1557b0;
+            background: #1557b0;
         }
 
         .note {
-            color: #64748b;
+            color: #666;
             font-size: 0.9rem;
+            margin-top: 1rem;
         }
 
         /* Editor styles */
         .editor-container {
             display: none;
             width: 100%;
-            max-width: 1000px;
+            max-width: 800px;
             background: white;
             border-radius: 12px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
-            padding: 1.5rem;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            margin-top: 2rem;
         }
 
-        .status-bar {
-            background-color: #38bdf8;
-            color: white;
+        .editor-header {
             padding: 1rem;
+            background: #f8f9fa;
+            border-bottom: 1px solid #e1e1e1;
+            border-radius: 12px 12px 0 0;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .editor-content {
+            padding: 1rem;
+        }
+
+        textarea {
+            width: 100%;
+            min-height: 300px;
+            padding: 1rem;
+            border: 1px solid #e1e1e1;
             border-radius: 8px;
-            margin-bottom: 1.5rem;
+            font-size: 1rem;
+            resize: vertical;
+        }
+
+        .file-upload {
+            margin: 1rem 0;
+            padding: 1rem;
+            border: 2px dashed #e1e1e1;
+            border-radius: 8px;
             text-align: center;
         }
 
-        .editor-area {
-            width: 100%;
-            min-height: 400px;
-            border: 2px solid #e2e8f0;
-            border-radius: 8px;
-            padding: 1rem;
-            margin-bottom: 1rem;
-            resize: vertical;
+        .file-list {
+            margin-top: 1rem;
+        }
+
+        .file-item {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 0.5rem;
+            background: #f8f9fa;
+            border-radius: 4px;
+            margin-bottom: 0.5rem;
         }
 
         .button-group {
             display: flex;
-            gap: 1rem;
-            margin-bottom: 1rem;
+            gap: 0.5rem;
         }
 
-        .upload-section {
-            margin-top: 1.5rem;
-            padding: 1.5rem;
-            border: 2px dashed #e2e8f0;
+        .btn-secondary {
+            background: #e1e1e1;
+            color: #333;
+        }
+
+        .btn-secondary:hover {
+            background: #d1d1d1;
+        }
+
+        .status {
+            position: fixed;
+            top: 1rem;
+            right: 1rem;
+            padding: 1rem;
             border-radius: 8px;
-            text-align: center;
-        }
-
-        .upload-btn {
-            background-color: #38bdf8;
+            background: #4caf50;
             color: white;
-            border: none;
-            padding: 0.75rem 1.5rem;
-            border-radius: 6px;
-            cursor: pointer;
-            margin-bottom: 1rem;
-        }
-
-        .file-info {
-            color: #64748b;
-            font-size: 0.9rem;
-        }
-
-        .stats {
-            display: flex;
-            justify-content: flex-end;
-            color: #64748b;
-            font-size: 0.9rem;
-            gap: 1rem;
+            display: none;
         }
     </style>
   </head>
   <body>
-    <div class="container">
-        <div class="logo">
-            <span>GP</span>
+    <div class="logo">
+        <span>GP</span>
+    </div>
+    <h1>GlobalPad</h1>
+    <p class="subtitle">Simple and secure file sharing</p>
+
+    <div class="container" id="access-container">
+        <h2 class="access-title">Access Your Notes</h2>
+        <p class="access-subtitle">Enter an access code to manage your notes and files</p>
+        <div class="input-group">
+            <input type="text" id="access-code" placeholder="Enter access code">
         </div>
-        <h1>GlobalPad</h1>
-        <p class="subtitle">Simple and secure file sharing</p>
+        <button class="btn" id="open-btn">Open</button>
+        <p class="note">Use any code you want. Just remember it to access your notes later!</p>
+    </div>
 
-        <div id="access-section" class="access-container">
-            <h2 class="access-title">Access Your Files</h2>
-            <p class="access-subtitle">Enter an access code to manage your files</p>
-            <div class="input-group">
-                <input type="text" id="access-code" placeholder="Enter access code">
-                <button class="btn" onclick="accessFiles()">Open</button>
-            </div>
-            <p class="note">Use any code you want. Just remember it to access your files later!</p>
-        </div>
-
-        <div id="editor-section" class="editor-container">
-            <div class="status-bar">
-                Your code is in use
-                <br>
-                After saving use the same code to open your notes again.
-            </div>
-
-            <textarea class="editor-area" id="editor" placeholder="Start typing..."></textarea>
-
-            <div class="upload-section">
-                <input type="file" id="file-input" style="display: none" accept=".pdf,.doc,.docx,.ppt,.pptx,.jpg,.jpeg,.png,.gif">
-                <button class="upload-btn" onclick="document.getElementById('file-input').click()">Upload File</button>
-                <p class="file-info">Supported files: PDF, Images, PPT, DOC (Max 10MB)</p>
-            </div>
-
+    <div class="editor-container" id="editor-container">
+        <div class="editor-header">
+            <div class="status-text">Your code is in use</div>
             <div class="button-group">
-                <button class="btn" onclick="saveAndClose()">Save & Close</button>
-                <button class="btn" onclick="saveContent()">Save</button>
-                <button class="btn" onclick="refreshContent()">Refresh</button>
-                <button class="btn" onclick="closeEditor()">Close</button>
+                <button class="btn btn-secondary" id="save-btn">Save</button>
+                <button class="btn btn-secondary" id="refresh-btn">Refresh</button>
+                <button class="btn" id="save-close-btn">Save & Close</button>
+                <button class="btn btn-secondary" id="close-btn">Close</button>
             </div>
-
-            <div class="stats">
-                <span id="viewers">Current Viewers: 5</span>
-                <span id="char-count">36/500000/500000</span>
+        </div>
+        <div class="editor-content">
+            <textarea id="note-content" placeholder="Start typing your notes here..."></textarea>
+            <div class="file-upload">
+                <input type="file" id="file-input" accept=".pdf,.doc,.docx,.ppt,.pptx,.txt,.jpg,.jpeg,.png" style="display: none">
+                <button class="btn" id="upload-btn">Upload Files</button>
+                <p class="note">Supported files: PDF, DOC, PPT, Images (Max size: 10MB)</p>
+            </div>
+            <div class="file-list" id="file-list">
+                <!-- Files will be listed here -->
             </div>
         </div>
     </div>
 
+    <div class="status" id="status-message"></div>
+
     <script>
-        function accessFiles() {
-            const code = document.getElementById('access-code').value;
-            if (code.trim() === '') {
-                alert('Please enter an access code');
-                return;
-            }
-            document.getElementById('access-section').style.display = 'none';
-            document.getElementById('editor-section').style.display = 'block';
-            // Here you would typically load the user's content
-        }
+        // DOM Elements
+        const accessContainer = document.getElementById('access-container');
+        const editorContainer = document.getElementById('editor-container');
+        const accessCode = document.getElementById('access-code');
+        const openBtn = document.getElementById('open-btn');
+        const saveBtn = document.getElementById('save-btn');
+        const refreshBtn = document.getElementById('refresh-btn');
+        const saveCloseBtn = document.getElementById('save-close-btn');
+        const closeBtn = document.getElementById('close-btn');
+        const noteContent = document.getElementById('note-content');
+        const fileInput = document.getElementById('file-input');
+        const uploadBtn = document.getElementById('upload-btn');
+        const fileList = document.getElementById('file-list');
+        const statusMessage = document.getElementById('status-message');
 
-        function saveContent() {
-            // Save the content
-            alert('Content saved successfully!');
-        }
-
-        function saveAndClose() {
-            // Save the content
-            alert('Content saved successfully!');
+        // Show status message
+        function showStatus(message, isError = false) {
+            statusMessage.textContent = message;
+            statusMessage.style.background = isError ? '#f44336' : '#4caf50';
+            statusMessage.style.display = 'block';
             setTimeout(() => {
-                window.location.reload();
-            }, 1000);
+                statusMessage.style.display = 'none';
+            }, 3000);
         }
 
-        function refreshContent() {
-            // Refresh the content
-            if (confirm('Are you sure you want to refresh? Any unsaved changes will be lost.')) {
-                document.getElementById('editor').value = '';
-            }
-        }
+        // Handle file upload
+        uploadBtn.addEventListener('click', () => {
+            fileInput.click();
+        });
 
-        function closeEditor() {
-            if (confirm('Are you sure you want to close? Any unsaved changes will be lost.')) {
-                window.location.reload();
-            }
-        }
-
-        // File upload handling
-        document.getElementById('file-input').addEventListener('change', function(e) {
+        fileInput.addEventListener('change', async (e) => {
             const file = e.target.files[0];
             if (!file) return;
 
-            // Check file size (10MB limit)
             if (file.size > 10 * 1024 * 1024) {
-                alert('File size must be less than 10MB');
-                this.value = '';
+                showStatus('File size must be less than 10MB', true);
                 return;
             }
 
-            // Check file type
-            const allowedTypes = [
-                'application/pdf',
-                'image/jpeg',
-                'image/png',
-                'image/gif',
-                'application/vnd.ms-powerpoint',
-                'application/vnd.openxmlformats-officedocument.presentationml.presentation',
-                'application/msword',
-                'application/vnd.openxmlformats-officedocument.wordprocessingml.document'
-            ];
+            const formData = new FormData();
+            formData.append('file', file);
+            formData.append('userId', accessCode.value);
 
-            if (!allowedTypes.includes(file.type)) {
-                alert('Invalid file type. Only PDF, Images, PPT, and DOC files are allowed.');
-                this.value = '';
+            try {
+                const response = await fetch('/api/upload', {
+                    method: 'POST',
+                    body: formData
+                });
+
+                if (!response.ok) throw new Error('Upload failed');
+
+                const result = await response.json();
+                showStatus('File uploaded successfully');
+                loadFiles();
+            } catch (error) {
+                showStatus('Failed to upload file', true);
+            }
+        });
+
+        // Load files
+        async function loadFiles() {
+            try {
+                const response = await fetch(`/api/files/user/${accessCode.value}`);
+                const files = await response.json();
+
+                fileList.innerHTML = files.map(file => `
+                    <div class="file-item">
+                        <span>${file.filename}</span>
+                        <div class="button-group">
+                            <button class="btn btn-secondary" onclick="downloadFile('${file.fileId}')">Download</button>
+                            <button class="btn btn-secondary" onclick="deleteFile('${file.fileId}')">Delete</button>
+                        </div>
+                    </div>
+                `).join('');
+            } catch (error) {
+                showStatus('Failed to load files', true);
+            }
+        }
+
+        // Download file
+        async function downloadFile(fileId) {
+            window.open(`/api/download/${fileId}`);
+        }
+
+        // Delete file
+        async function deleteFile(fileId) {
+            try {
+                const response = await fetch(`/api/delete/${fileId}`, {
+                    method: 'DELETE',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify({ userId: accessCode.value })
+                });
+
+                if (!response.ok) throw new Error('Delete failed');
+
+                showStatus('File deleted successfully');
+                loadFiles();
+            } catch (error) {
+                showStatus('Failed to delete file', true);
+            }
+        }
+
+        // Save note
+        async function saveNote() {
+            try {
+                const response = await fetch('/api/note', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify({
+                        userId: accessCode.value,
+                        content: noteContent.value
+                    })
+                });
+
+                if (!response.ok) throw new Error('Save failed');
+
+                showStatus('Note saved successfully');
+            } catch (error) {
+                showStatus('Failed to save note', true);
+            }
+        }
+
+        // Load note
+        async function loadNote() {
+            try {
+                const response = await fetch(`/api/notes/user/${accessCode.value}`);
+                const notes = await response.json();
+                if (notes.length > 0) {
+                    noteContent.value = notes[0].content;
+                }
+            } catch (error) {
+                showStatus('Failed to load note', true);
+            }
+        }
+
+        // Event listeners
+        openBtn.addEventListener('click', () => {
+            if (!accessCode.value) {
+                showStatus('Please enter an access code', true);
                 return;
             }
+            accessContainer.style.display = 'none';
+            editorContainer.style.display = 'block';
+            loadNote();
+            loadFiles();
+        });
 
-            // Here you would typically upload the file
-            alert('File ready for upload!');
+        saveBtn.addEventListener('click', saveNote);
+
+        refreshBtn.addEventListener('click', () => {
+            loadNote();
+            loadFiles();
+        });
+
+        saveCloseBtn.addEventListener('click', async () => {
+            await saveNote();
+            showStatus('Saved successfully');
+            setTimeout(() => {
+                accessContainer.style.display = 'block';
+                editorContainer.style.display = 'none';
+            }, 1000);
+        });
+
+        closeBtn.addEventListener('click', () => {
+            accessContainer.style.display = 'block';
+            editorContainer.style.display = 'none';
         });
     </script>
   </body>
